--- a/views/partials/control_navigation.html
+++ b/views/partials/control_navigation.html
@@ -13,14 +13,16 @@
           <div class="dropdown" id="file">
             <div class="dropdownmenu">
               <a id="createnew" data-desc="Create a brand new bin" class="button group" title="Create fresh bin" href="{{root}}" data-label="new">New</a>
-              {{#feature request "private"}}
-              <a id="public" data-desc="Set this bin to public" class="visibilityToggle button group"   title="Set this bin to public" href="{{root}}" data-label="public" data-vis="public">Make bin public</a>
-              <a id="private" data-desc="Set this bin to private" class="visibilityToggle button group" title="Set this bin to private" href="{{root}}" data-label="private" data-vis="private">Make bin private</a>
-              {{else}}
-                {{#feature request "upgrade"}}
-              <a data-desc="Set this bin to private" data-pro="true" class="button group" title="Set this bin to private" href="{{root}}/upgrade">Make bin private</a>
+              {{#unless config.session.disableUsers}}
+                {{#feature request "private"}}
+                <a id="public" data-desc="Set this bin to public" class="visibilityToggle button group"   title="Set this bin to public" href="{{root}}" data-label="public" data-vis="public">Make bin public</a>
+                <a id="private" data-desc="Set this bin to private" class="visibilityToggle button group" title="Set this bin to private" href="{{root}}" data-label="private" data-vis="private">Make bin private</a>
+                {{else}}
+                  {{#feature request "upgrade"}}
+                <a data-desc="Set this bin to private" data-pro="true" class="button group" title="Set this bin to private" href="{{root}}/upgrade">Make bin private</a>
+                  {{/feature}}
                 {{/feature}}
-              {{/feature}}
+              {{/unless}}
               {{#feature request "delete"}}
               <a class="deletebin button group" data-desc="Delete bin" title="Delete this bin" href="{{root}}/delete" data-shortcut="ctrl+shift+del">Delete</a>
               {{!--<!-- <a class="deleteallbins button group" data-desc="Delete all bin snapshots" title="Delete all bin snapshots" href="{{root}}/delete-all">Delete all snapshots</a> -->--}}
@@ -149,105 +151,108 @@
         </div>
       {{/if}}
       <div id="panels"></div>
+
       <div class="help">
+      {{#unless config.session.disableUsers}}
         {{#unless embed}}
-          {{#feature request "accountPages"}}
-          <div class="loggedout menu">
-            {{#feature request "github"}}
-            <a href="{{root}}/login" class="button button-dropdown focusbtn" id="loginbtn">Login or Register</a>
-            <div class="dropdown login" id="registerLogin">
-              <div class="dropdowncontent">
-                <a class="btn-github" href="{{root}}/auth/github">
-                  <img src="{{static}}/images/github-32.png">
-                  Login or Register via GitHub
-                </a>
-                <span class="login-group">
-                  Or
-                  <a class="btn-login" href="{{root}}/login">use your email address</a>
-                </span>
+            {{#feature request "accountPages"}}
+            <div class="loggedout menu">
+              {{#feature request "github"}}
+              <a href="{{root}}/login" class="button button-dropdown focusbtn" id="loginbtn">Login or Register</a>
+              <div class="dropdown login" id="registerLogin">
+                <div class="dropdowncontent">
+                  <a class="btn-github" href="{{root}}/auth/github">
+                    <img src="{{static}}/images/github-32.png">
+                    Login or Register via GitHub
+                  </a>
+                  <span class="login-group">
+                    Or
+                    <a class="btn-login" href="{{root}}/login">use your email address</a>
+                  </span>
+                </div>
               </div>
+              {{else}}
+              <a href="{{root}}/login" class="button" id="loginbtn">Login or Register</a>
+              {{/feature}}
+            </div>
+            <div class="loggedin menu{{#feature request "pro"}} pro {{/feature}}">
             </div>
             {{else}}
-            <a href="{{root}}/login" class="button" id="loginbtn">Login or Register</a>
+              {{#if home}}
+                {{> account/old-profiles}}
+              {{else}}
+              <div class="menu">
+                <a href="#login" class="button button-open" id="loginbtn">Log in</a>
+                <div class="dropdown dd-right" id="login">
+                  <div class="dropdowncontent">
+                    <form class="forgot" action="{{root}}/forgot" method="post">
+                      <div>
+                        <label>Email<br>
+                        <input name="email" required type="email"></label>
+                      </div>
+                      <div>
+                        <input type=submit value="Request password reset">
+                        <input type="hidden" name="_csrf" value="{{token}}">
+                        <input type="hidden" name="_redirect" value="home">
+                      </div>
+                    </form>
+                    <form class="login" action="{{root}}/login" method="post">
+                      <p class="loginFeedback"></p>
+                      <div>
+                        <label>Username or Email<br>
+                        <input name="username" type="text"></label>
+                      </div>
+                      <div>
+                        <label>Password<br>
+                        <input name="password" type="password"></label>
+                      </div>
+                      <div>
+                        <input type=submit value="Log in">
+                        <a id="lostpass" href="{{root}}/forgot">Reset password</a>
+                      </div>
+                      {{#feature request "github"}}
+                      <div>
+                        <span class="login-splitter">or</span>
+                        <a title="To sign in using Github and export gists to your Github profile" class="btn-github" href="{{root}}/auth/github"><img src="{{static}}/images/github-32.png"> Sign in with Github</a>
+                      </div>
+                      {{/feature}}
+                    </form>
+                  </div>
+                </div>
+              </div><div class="menu">
+                <a href="#register" class="button button-open focusbtn" id="regbtn">Register</a>
+                <div class="dropdown dd-right" id="register">
+                  <div class="dropdowncontent">
+                    <p>Registration allows you to retrieve your saved files.</p>
+                    <form class="login" action="{{root}}/register" method="post">
+                      <p class="loginFeedback"></p>
+                      <div>
+                        <label>Username<br><input required name="username" type="text"></label>
+                      </div>
+                      <div>
+                        <label>Email<br>
+                        <input name="email" required type="email"></label>
+                      </div>
+                      <div>
+                        <label>Password<br>
+                        <input required name="password" type="password"></label>
+                      </div>
+                      <div>
+                        <input type=submit value="Register">
+                      </div>
+                      {{#feature request "github"}}
+                      <div>
+                        <span class="login-splitter">or</span>
+                        <a class="btn-github" href="{{root}}/auth/github"><img src="{{static}}/images/github-32.png"> Register with Github</a>
+                      </div>
+                      {{/feature}}
+                    </form>
+                  </div>
+                </div>
+              </div>
+              {{/if}}
             {{/feature}}
-          </div>
-          <div class="loggedin menu{{#feature request "pro"}} pro {{/feature}}">
-          </div>
-          {{else}}
-            {{#if home}}
-              {{> account/old-profiles}}
-            {{else}}
-            <div class="menu">
-              <a href="#login" class="button button-open" id="loginbtn">Log in</a>
-              <div class="dropdown dd-right" id="login">
-                <div class="dropdowncontent">
-                  <form class="forgot" action="{{root}}/forgot" method="post">
-                    <div>
-                      <label>Email<br>
-                      <input name="email" required type="email"></label>
-                    </div>
-                    <div>
-                      <input type=submit value="Request password reset">
-                      <input type="hidden" name="_csrf" value="{{token}}">
-                      <input type="hidden" name="_redirect" value="home">
-                    </div>
-                  </form>
-                  <form class="login" action="{{root}}/login" method="post">
-                    <p class="loginFeedback"></p>
-                    <div>
-                      <label>Username or Email<br>
-                      <input name="username" type="text"></label>
-                    </div>
-                    <div>
-                      <label>Password<br>
-                      <input name="password" type="password"></label>
-                    </div>
-                    <div>
-                      <input type=submit value="Log in">
-                      <a id="lostpass" href="{{root}}/forgot">Reset password</a>
-                    </div>
-                    {{#feature request "github"}}
-                    <div>
-                      <span class="login-splitter">or</span>
-                      <a title="To sign in using Github and export gists to your Github profile" class="btn-github" href="{{root}}/auth/github"><img src="{{static}}/images/github-32.png"> Sign in with Github</a>
-                    </div>
-                    {{/feature}}
-                  </form>
-                </div>
-              </div>
-            </div><div class="menu">
-              <a href="#register" class="button button-open focusbtn" id="regbtn">Register</a>
-              <div class="dropdown dd-right" id="register">
-                <div class="dropdowncontent">
-                  <p>Registration allows you to retrieve your saved files.</p>
-                  <form class="login" action="{{root}}/register" method="post">
-                    <p class="loginFeedback"></p>
-                    <div>
-                      <label>Username<br><input required name="username" type="text"></label>
-                    </div>
-                    <div>
-                      <label>Email<br>
-                      <input name="email" required type="email"></label>
-                    </div>
-                    <div>
-                      <label>Password<br>
-                      <input required name="password" type="password"></label>
-                    </div>
-                    <div>
-                      <input type=submit value="Register">
-                    </div>
-                    {{#feature request "github"}}
-                    <div>
-                      <span class="login-splitter">or</span>
-                      <a class="btn-github" href="{{root}}/auth/github"><img src="{{static}}/images/github-32.png"> Register with Github</a>
-                    </div>
-                    {{/feature}}
-                  </form>
-                </div>
-              </div>
-            </div>
-            {{/if}}
-          {{/feature}}
+          {{/unless}}
         {{/unless}}
 
         {{#if settings.[ui showblog]}}
@@ -268,16 +273,18 @@
               {{else}}
               <a id="menu-help-tips" data-desc="Learn about JS Bin features & tricks" target="_blank" href="http://jsbin.com/help">Help topics</a>
               {{/if}}
-              <hr data-desc="">
-              {{#feature request "pro"}}
-              <a id="menu-pro-support" data-desc="Email support" href="mailto:support@jsbin.com?subject=Pro%20user%20support%20request">Pro user email support</a>
-              {{/feature}}
-              <a id="menu-feedback" data-desc="Help make JS Bin better" id="newissue" target="_blank" href="http://github.com/jsbin/jsbin/issues/new">Send feedback &amp; file bugs</a>
-              <a id="menu-fork" data-desc="Help make JS Bin better" target="_blank" href="http://github.com/jsbin/jsbin/">Fork on Github</a>
-              <a id="menu-follow-jsbin" data-desc="Find out the latest news & info" target="_blank" href="http://twitter.com/js_bin">Follow @js_bin</a>
-              {{#feature request "!pro"}}
-              <a class="" data-pro="true" id="menu-pro" data-desc="Upgrade" href="/upgrade">Support JS Bin: upgrade now</a>
-              {{/feature}}
+              {{#unless config.session.disableUsers}}
+                <hr data-desc="">
+                {{#feature request "pro"}}
+                <a id="menu-pro-support" data-desc="Email support" href="mailto:support@jsbin.com?subject=Pro%20user%20support%20request">Pro user email support</a>
+                {{/feature}}
+                <a id="menu-feedback" data-desc="Help make JS Bin better" id="newissue" target="_blank" href="http://github.com/jsbin/jsbin/issues/new">Send feedback &amp; file bugs</a>
+                <a id="menu-fork" data-desc="Help make JS Bin better" target="_blank" href="http://github.com/jsbin/jsbin/">Fork on Github</a>
+                <a id="menu-follow-jsbin" data-desc="Find out the latest news & info" target="_blank" href="http://twitter.com/js_bin">Follow @js_bin</a>
+                {{#feature request "!pro"}}
+                <a class="" data-pro="true" id="menu-pro" data-desc="Upgrade" href="/upgrade">Support JS Bin: upgrade now</a>
+                {{/feature}}
+              {{/unless}}
             </div>
           </div>
         </div>
